--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script async type="module" src="init.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script async type="module" src="auxiliary.js"></script>
+    <title></title>
   </head>
   <body>
   <div id="main"></div>
